[package]
name = "taiko"
authors = ["luna <ulfrthewolf@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "silkwood",
]

[workspace.dependencies]
egui = "0.23.0"
kira = "0.8.5"
winit = { version = "0.28.3", features = ["serde"] }
anyhow = "1.0"
lyon = "1.0.1"
wgpu = "0.17.0"
# wgpu_text doesnt follow semver -_-
wgpu_text = "=0.8.3"

[dependencies]
silkwood = { path = "./silkwood" }
anyhow.workspace = true
egui.workspace = true
env_logger = "0.10.0"
itertools = "0.11"
kira.workspace = true
lazy_static = "1.4.0"
log = "0.4.17"
lookahead = "0.1.0"
lyon.workspace = true
nom = "7.1.3"
num-derive = "0.4"
num-traits = "0.2"
serde = { version = "1.0.183", features = ["derive"] }
toml = "0.8"
wgpu.workspace = true
# I'll have to get rid of this dependency, it's unnecessary
wgpu_text.workspace = true
winit.workspace = true

