[package]
name = "taiko"
authors = ["luna <ulfrthewolf@gmail.com>"]
description = "A tja player/taiko simulator aiming to be fast and easy to use"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kira = "0.8.5"
winit = { version = "0.30.3", features = ["serde"] }
lyon = "1.0.1"
wgpu = "0.20.1"
kaku = "0.1.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.17"
lookahead = "0.1.0"
nom = "7.1.3"
serde = { version = "1.0.183", features = ["derive"] }
num-derive = "0.4.2"
num-traits = "0.2.18"
image = "0.24.8"
pollster = "0.3.0"
itertools = "0.12.1"
anyhow = "1.0.79"
toml = "0.8.10"
egui = "0.28.1"
egui-wgpu = "0.28.1"
egui_winit_platform = { git = "https://github.com/hasenbanck/egui_winit_platform" }

